--- a/src/assets/Styles.css
+++ b/src/assets/Styles.css
@@ -5,7 +5,7 @@ body {
 
 #app {
     background-color: #2b2b2b50;
-    height: 100vh;
+    height: 800px;
     width: 1000px;
     position: fixed;
     top: 50%;
@@ -13,8 +13,11 @@ body {
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     display: grid;
-    grid-template-rows: 1fr 15fr 1fr;
+    grid-template-rows: 15fr 1fr;
     font-family: 'Roboto', sans-serif;
+    -moz-box-shadow:    inset 0 0 10px rgb(0, 0, 0);
+    -webkit-box-shadow: inset 0 0 10px rgb(0, 0, 0);
+    box-shadow:         inset 0 0 10px rgb(0, 0, 0);
 }
 
 .Preview {
@@ -118,21 +121,33 @@ body {
     font-family: 'Roboto', sans-serif;
   }
 
-  .info {
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 10px;
-    background-color: #2b2b2b50;
-    color: white;
+  .lineNR {
+    color: #2b2b2b50;
     user-select: none;
-    font-size: 20px;
-    border: solid #2b2b2b50 1px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  }
+
+  .value {
     font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    background-color: transparent;
+    outline: none;
+    border: none;
+    width: min-content;
+    color: white;
   }
-  .fas {
-      margin-right: 5px;
-      color: #4CAF50;
-  }
+
+  .Option_Done {
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    border: dashed 1px #2b2b2b50;
+    padding: 5px;
+    font-family: 'Roboto', sans-serif;
+}
+.doneOption {
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
+}
